--- a/frontend/style.css
+++ b/frontend/style.css
@@ -65,32 +65,40 @@ nav ul li a {
 .products {
     padding: 50px 0;
 }
-
-.product {
-    text-align: center;
-    margin-bottom: 40px;
+.container1 {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap; /* Allow items to wrap to the next line */
 }
 
-.product img {
-    max-width: 10%;
+.product1, .product2 {
+    flex-basis: calc(30% - 50px); /* Set the width of each product item to 50% minus margin */
+    margin: 10px; /* Add some margin between product items */
+}
+
+.product1 img, .product2 img {
+    display: block;
+    max-width: 30%; /* Change max-width to 100% */
     height: auto;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-.product h3 {
+.product1 h3, .product2 h3 {
     font-family: 'Pacifico', cursive;
     font-size: 1.5em;
     margin-top: 10px;
+    text-align:left; /* Center the text */
 }
 
-.product p {
+.product1 p, .product2 p {
     font-size: 1.2em;
     margin-bottom: 10px;
+    text-align: left; /* Center the text */
 }
 
-.product button {
-    background-color: #e74c3c;
+.product1 button, .product2 button {
+    background-color: #0b3f5df0;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -98,18 +106,13 @@ nav ul li a {
     cursor: pointer;
     border-radius: 5px;
     transition: background-color 0.3s ease;
+    margin: 0 auto; /* Center the button */
 }
 
-.product button:hover {
+.product1 button:hover, .product2 button:hover {
     background-color: #c0392b;
 }
 
-footer {
-    background-color: #34495e;
-    color: #fff;
-    padding: 20px 0;
-    text-align: center;
-}
 
 @media only screen and (max-width: 768px) {
     header h1 {
